--- a/ccminer.vcxproj.filters
+++ b/ccminer.vcxproj.filters
@@ -916,6 +916,9 @@
     <CudaCompile Include="equi\cuda_equi.cu">
       <Filter>Source Files\equi</Filter>
     </CudaCompile>
+    <CudaCompile Include="allium.cu">
+      <Filter>Source Files\CUDA</Filter>
+    </CudaCompile>
     <CudaCompile Include="x11\timetravel10.cu">
       <Filter>Source Files\CUDA\x11</Filter>
     </CudaCompile>
